feat: add endpoint /projects/id with tests; add search parameters in swagger for projects
