# src/api/routes/info.ts
@@ -8,8 +8,12 @@ const infoController = new InfoController();
 infoRouter.get("/profile", (req, res) => {
     infoController.profile(req, res);
 });
+
 infoRouter.get("/projects", (req, res) => {
     return infoController.searchProjects(req, res);
+});
+infoRouter.get("/projects/:id", (req, res) => {
+    return infoController.getProjectById(req, res);
 });
 
 export default infoRouter;
